Organize the change notification by Bible
https://github.com/bibledit/cloud/issues/102

--- a/changes/changes.html
+++ b/changes/changes.html
@@ -22,7 +22,7 @@
 translate("This page lists the notifications of the changes in the Bible text.")
 <!-- #BEGINITERATION bibleselector -->
 |
-<a href="?selectbible=##selectbible##">##biblename##</a>
+<a href="?selectbible=##selectbible##" class="##class##">##biblename##</a>
 <!-- #ENDITERATION bibleselector -->
 </p>
 <p>translate("Use the up and down arrow keys to navigate through the entries.")</p>
