Neater translatable strings.

--- a/help/licenses.html
+++ b/help/licenses.html
@@ -7,11 +7,15 @@
 <p>translate("You should have received a copy of the GNU General Public License along with this program. See also") <a href="http://www.gnu.org/licenses/gpl.html" ##external##>http://www.gnu.org/licenses/gpl.html</a>.</p>
 
 <h3>translate("ETCBC4 Hebrew text database")</h3>
-<p>translate("The ETCBC database of the Hebrew Bible contains the scholarly text of the Hebrew Bible with linguistic markup.
-The source of the data is the")
+<p>
+translate("The ETCBC database of the Hebrew Bible contains the scholarly text of the Hebrew Bible with linguistic markup.")
+translate ("Original data source:")
 <a href="http://dx.doi.org/10.17026%2Fdans-z6y-skyh" ##external##>HEBREW TEXT DATABASE ETCBC4</a>.
-translate("Bibledit obtained the data from")
-<a href="https://shebanq.ancient-data.org/sources" ##external##>translate("SHEBANQ, a search engine for the Hebrew Bible")</a>.translate("This work is licensed under a") <a href="http://creativecommons.org/licenses/by-nc/4.0" ##external##>translate("Creative Commons Attribution-NonCommercial 4.0 International License")</a>. translate("You may not use the data for commercial applications without consent.")
+translate("Bibledit's data source:")
+<a href="https://shebanq.ancient-data.org/sources" ##external##>translate("SHEBANQ, a search engine for the Hebrew Bible")</a>.
+translate("License:")
+<a href="http://creativecommons.org/licenses/by-nc/4.0" ##external##>translate("Creative Commons Attribution-NonCommercial 4.0 International License")</a>.
+translate("You may not use the data for commercial applications without consent.")
 </p>
 
 <h3>translate("Other code and data")</h3>
