Tidier localisation messages

--- a/help/licenses.html
+++ b/help/licenses.html
@@ -20,7 +20,7 @@ translate("You may not use the data for commercial applications without consent.
 
 <h3>translate("Other code and data")</h3>
 <p>translate("All the code and data included in Bibledit that does not fall in the above license categories has been licensed as mentioned in various bits of source code included in Bibledit.")
-<a href="https://github.com/bibledit" ##external##>translate("See the source code repository")</a>.
+<a href="https://github.com/bibledit" ##external##>translate("See the source code repository.")</a>
 </p>
 
 <script type="text/javascript" src="../assets/external.js"></script>
