Done: Put all "Bibledit"'s in i18n domain.
Strings checked: grep -R --exclude=\*.po\* "Bibledit" * | grep '"' |
grep -v "translate”.
https://github.com/bibledit/cloud/issues/120

--- a/setup/index.html
+++ b/setup/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="/setup/stylesheet.css" type="text/css" />
 </head>
 <body>
-<h1><img src="/assets/bibledit.png"> <a href="http://bibledit.org/">Bibledit Setup</a></h1>
+<h1><img src="/assets/bibledit.png"> <a href="http://bibledit.org/">Setup</a></h1>
 <!-- #BEGINZONE enteradmin -->
 <p>Please provide the following information. You can change this later.</p>
 <!-- #ENDZONE enteradmin -->
