--- a/help/about.html
+++ b/help/about.html
@@ -3,7 +3,7 @@
 <br>
 <p><a href="http://bibledit.org" ##external##>http://bibledit.org</a></p>
 <br>
-<p><a href="freebible">translate ("The Free Bible")</a></p>
+<p><a href="freebb">translate ("The Free Bible")</a></p>
 <br>
 <p><a href="changelog">ChangeLog</a></p>
 <br>
