--- a/bible/settings.html
+++ b/bible/settings.html
@@ -32,7 +32,7 @@
 <!-- #BEGINZONE write_access -->
   <!-- #BEGINZONE server -->
     <p><a href="manage?delete=##bible##">translate("Delete this Bible")</a></p>
-    <p><a href="/resource/bible2resource?bible=##bible##">translate("Convert to USFM resource")</a></p>
+    <p><a href="/resource/bb2resource?bible=##bible##">translate("Convert to USFM resource")</a></p>
   <!-- #ENDZONE server -->
 <!-- #ENDZONE write_access -->
 <p><a href="../compare/index?bible=##bible##">translate("Compare with ...")</a></p>
