--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p></p>
+<p>5.0.396: More natural order of the books in the exports.</p>
 <p>5.0.380: Organize the change notification by Bible.</p>
 <p>5.0.373: The list of consultation notes can display the Bible a note refers to.</p>
 <p>5.0.372: Most emails about consultation notes include the name of the Bible in the subject line.</p>
