--- a/email/index.html
+++ b/email/index.html
@@ -4,6 +4,10 @@
 <p>translate("It needs an external email account for sending and receiving email.")</p>
 <p>translate("The help information on this page assumes that we use a Google mail account. You will have your own email account dedicated to Bibledit.")</p>
 <p>translate("The email address is bibletranslation@gmail.com, and the password is pazzwrd.")</p>
+<p>
+translate("The Google mail account should let less secure apps use the account.")
+translate("Bibledit email setup requires this.")
+</p>
 <p>translate("In case the setup fails to work, all diagnostics can be seen in the Journal.")</p>
 
 <a name="name"></a>
