Better obfuscation of Help/About
https://github.com/bibledit/cloud/issues/120

--- a/help/about.html
+++ b/help/about.html
@@ -1,5 +1,5 @@
 <h2>translate("About")</h2>
-<p>translate ("Bibledit")" ##version##</p>
+<p>translate ("Bibledit") ##version##</p>
 <br>
 <p><a href="http://bibledit.org" ##external##>http://bibledit.org</a></p>
 <br>
