Can set the stylesheet per Bible
https://github.com/bibledit/cloud/issues/119

--- a/bb/settings.html
+++ b/bb/settings.html
@@ -57,4 +57,14 @@ translate("The public can give feedback")
 <p><a href="?bible=##bible##&resource=">translate("Import text from a resource")</a></p>
 <!-- #ENDZONE server -->
 <!-- #ENDZONE write_access -->
+<p>
+translate("Stylesheet"):
+<!-- #BEGINZONE write_access -->
+<a href="settings?bible=##bible##&stylesheet=">
+  <!-- #ENDZONE write_access -->
+  ##stylesheet##
+  <!-- #BEGINZONE write_access -->
+</a>
+<!-- #ENDZONE write_access -->
+</p>
 <script type="text/javascript" src="../assets/checkbox.js"></script>
