Fixed: The caller of the note is stuck to the note text in the odt export file
This fixes https://github.com/bibledit/cloud/issues/125

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,7 @@
 <h1>ChangeLog</h1>
 
 <p></p>
+<p>5.0.406: Better defaults for footnotes formatting.</p>
 <p>5.0.406: Improved check on French guillemets.</p>
 <p>5.0.405: Can set the stylesheet per Bible.</p>
 <p>5.0.403: Better internationalization of the Bible book names.</p>
