Notes display can show note status
https://github.com/bibledit/cloud/issues/135

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -212,8 +212,12 @@ translate ("This is an extra control in addition to the normal one.")
 <!-- #BEGINZONE advancedmode -->
 <br>
 <p>
-translate ("The list of consultation notes shows the name of the Bible the note refers to"):
+translate ("The list of consultation notes shows the Bible the note refers to"):
 <a href="?showbibleinnoteslist">##showbibleinnoteslist##</a>.
+</p>
+<p>
+translate ("The consultation notes show the note status"):
+<a href="?shownotestatus">##shownotestatus##</a>.
 </p>
 <!-- #ENDZONE advancedmode -->
 
