The OpenDocument export respects the custom order of books
This fixes https://github.com/bibledit/cloud/issues/139

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,6 @@
 <h1>ChangeLog</h1>
 
-<p></p>
+<p>5.0.412: The OpenDocument export respects the custom order of books.</p>
 <p>5.0.410: The notes display can show the note status.</p>
 <p>5.0.408: Disable style setting for spanning columns.</p>
 <p>5.0.407: Updated Open Scriptures Hebrew Bible.</p>
