--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.415: Additional standard orders for the Bible books.</p>
 <p>5.0.412: The OpenDocument export respects the custom order of books.</p>
 <p>5.0.410: The notes display can show the note status.</p>
 <p>5.0.408: Disable style setting for spanning columns.</p>
