--- a/personalize/index.html
+++ b/personalize/index.html
@@ -182,7 +182,7 @@ translate ("Whether to have a menu entry to go to the changes.")
 <!-- #BEGINZONE advancedmode -->
 <br>
 <p>
-translate ("Controls for dismissing change notifications at the top"):
+translate ("Controls for selecting and dismissing change notifications at the top"):
 <a href="?dismisschangesattop">##dismisschangesattop##</a>.
 translate ("This applies to the page with the change notifications.")
 translate ("Normally the controls are at the bottom of the page.")
