--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.419: A translator can do some bulk operations on consultation notes.</p>
 <p>5.0.418: Can display the Bible selector for the change notifications at the top.</p>
 <p>5.0.415: Additional standard orders for the Bible books.</p>
 <p>5.0.412: The OpenDocument export respects the custom order of books.</p>
