--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.439: Upon opening, the USFM editor scrolls the text cursor into view.</p>
 <p>5.0.436: Improved plain text extraction from comments sent by email.</p>
 <p>5.0.434: The Bible editors support the five special XML characters.</p>
 <p>5.0.431: The Android app was updated to run on Chrome OS as well.</p>
