--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.455: Secure transport layer update.</p>
 <p>5.0.442: Removes USFM word level attributes from the visual exports.</p>
 <p>5.0.439: Upon opening, the USFM editor scrolls the text cursor into view.</p>
 <p>5.0.436: Improved plain text extraction from comments sent by email.</p>
