--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,7 @@
 <h1>ChangeLog</h1>
 
-<p>5.0.517: More robust consultation notes verse focusing.</p>
+<p>5.0.518: Translators can export Bibles.</p>
+<p>5.0.518: More robust consultation notes verse focusing.</p>
 <p>5.0.517: Fix tool tips in the main menu.</p>
 <p>5.0.517: Open Scriptures Hebrew Bible updated to version 1.4.</p>
 <p>5.0.455: Secure transport layer update.</p>
