--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.534: Swipe Resources into another order.</p>
 <p>5.0.518: Translators can export Bibles.</p>
 <p>5.0.518: More robust consultation notes verse focusing.</p>
 <p>5.0.517: Fix tool tips in the main menu.</p>
