--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.551: Clarify limited scope of typesetting capabilities.</p>
 <p>5.0.535: Can show focused verse text during note creation.</p>
 <p>5.0.534: Swipe Resources into another order.</p>
 <p>5.0.518: Translators can export Bibles.</p>
