Clearer git repository status on git repository setup
This fixes https://github.com/bibledit/cloud/issues/197

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.554: Clearer git repository status on git repository setup.</p>
 <p>5.0.551: Clarify limited scope of typesetting capabilities.</p>
 <p>5.0.535: Can show focused verse text during note creation.</p>
 <p>5.0.534: Swipe Resources into another order.</p>
