--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.559: Night mode.</p>
 <p>5.0.554: Set the font name for export to OpenDocument.</p>
 <p>5.0.554: The exported Bibles are accessible from one menu entry, rather than from two.</p>
 <p>5.0.554: Clearer git repository status on git repository setup.</p>
