Updated installation information

--- a/help/installation.html
+++ b/help/installation.html
@@ -21,7 +21,7 @@ translate("When the internet connection is slow, or when it is off at times, it 
 translate("The changes made in this way can be synchronized with Bibledit Cloud through Send/receive.")
 </p>
 
-<h2>translate("Standard installation")</h2>
+<h2>translate("Installation")</h2>
 <p><a href="installwindows">translate("Bibledit on Windows")</a></p>
 <p><a href="installandroid">translate("Bibledit on Android")</a></p>
 <p><a href="installosx">translate("Bibledit on macOS")</a></p>
@@ -87,29 +87,29 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
 </li>
 </ol>
 
-<h2>translate("Development version")</h2>
+<h2>translate("Source code")</h2>
 <p>
   <a href="https://github.com/bibledit" ##external##>translate("The Bibledit source code is kept in git repositories.")</a>
 </p>
 
-<h2>translate("Hosting providers")</h2>
+<h2>translate("Hosting")</h2>
 <p>
   translate("To run Bibledit Cloud, a Linux VPS (virtual private server) is needed.")
   translate("Good providers are:")
 </p>
 <ol>
   <li>
-    <a href="http://ramnode.com/vps.php" ##external##>RamNode</a>, Premium OpenVZ SSD 128MB for $15 per year (2017).
+    <a href="http://ramnode.com/vps.php" ##external##>RamNode</a>, Premium OpenVZ SSD 128MB for $15 per year (2018).
   </li>
   <li>
-    <a href="https://www.digitalocean.com/?refcode=5189a8e56d7a" ##external##>Digital Ocean</a>, 512 Mb / 1 CPU / 20 Gb SSD Disk for $5 per month = $60 per year (2017).
+    <a href="https://www.digitalocean.com/?refcode=5189a8e56d7a" ##external##>Digital Ocean</a>, 512 Mb / 1 CPU / 20 Gb SSD Disk for $5 per month = $60 per year (2018).
   </li>
 </ol>
 
 <h2>translate("OpenLDAP")</h2>
 <p>
 translate("It is possible to enable an external OpenLDAP server for user authentication.")
-translate("The following file in the Bibledit installation provides all information needed:")
+translate("The following file in the Bibledit installation provides more information:")
 config/config.txt.
 </p>
 
