--- a/help/installation.html
+++ b/help/installation.html
@@ -105,6 +105,13 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
     <a href="https://www.digitalocean.com/?refcode=5189a8e56d7a" ##external##>Digital Ocean</a>, 512 Mb / 1 CPU / 20 Gb SSD Disk for $5 per month = $60 per year (2018).
   </li>
 </ol>
+<p>
+translate("Several Bibledit users offer free assistance in setting up inexpensive server hosting for Bibledit.")
+translate("If you would like this assistance, post a message to:")
+<a href="https://groups.google.com/forum/#!forum/bibledit-general" ##external##>groups.google.com/forum/#!forum/bibledit-general</a>.
+translate("Or use the contact form at the website:")
+<a href="http://bibledit.org" ##external##>bibledit.org</a>.
+</p>
 
 <h2>translate("OpenLDAP")</h2>
 <p>
