Use whitespace and bold for more readable notes discussions
This fixes https://github.com/bibledit/cloud/issues/213

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.566: Use whitespace and bold for more readable notes discussions.</p>
 <p>5.0.565: Managers and administrators receive email when a new user signs up.</p>
 <p>5.0.561: Upon connection to the Cloud, a client emails changes made in Bibles while it was disconnected from the Cloud.</p>
 <p>5.0.559: Night mode.</p>
