--- a/export/quickbb.html
+++ b/export/quickbb.html
@@ -6,7 +6,9 @@
   </head>
   <body>
     <h2>Quick Bible</h2>
-    <p>The folder contains two files: bible.yes and bible.yet.</p>
-    <p>The file to download and install in the Quick Bible app is "bible.yes".</p>
+    <p>The folder contains file 'bible.yet'.</p>
+    <p>To convert this to file 'bible.yes', run the following from a terminal:</p>
+    <p>shell_command</p>
+    <p>The file to install in the Quick Bible app is 'bible.yes'.</p>
   </body>
 </html>
