--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.583: Merge email: Now has spaces between the added and removed bits.</p>
 <p>5.0.566: Remove YetToYes2.jar because of security reasons and reducing feature bloat.</p>
 <p>5.0.566: Use whitespace and bold for more readable notes discussions.</p>
 <p>5.0.565: Managers and administrators receive email when a new user signs up.</p>
