Better hyperlinks in night mode
https://github.com/bibledit/cloud/issues/231

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.622: Better hyperlinks in night mode.</p>
 <p>5.0.622: Information about typesetting in Scribus.</p>
 <p>5.0.588: Cloud send mail when client send Bible text while it has no write access.</p>
 <p>5.0.583: Merge email: Now has spaces between the added and removed bits.</p>
