Typesetting text update

--- a/help/typesetting.html
+++ b/help/typesetting.html
@@ -24,7 +24,7 @@ translate("No more than that.")
 <p>translate("This section describes the steps to take to prepare the USFM code for export.")</p>
 <p>translate("Each Bible book is stored as one USFM file.")</p>
 <ul>
-<li>translate("Create a new Bible in Bibledit through menu Bibles. Give the Bible a name. The example calls it 'Ndebele'.")</li>
+<li>translate("Create a new Bible in Bibledit. Give the Bible a name. The example calls it 'Ndebele'.")</li>
 <li>translate("Click the 'Ndebele' Bible.")</li>
 <li>translate("Import data into it.")</li>
 <li>translate("Choose the option to upload a file.")</li>
