--- a/help/typesetting.html
+++ b/help/typesetting.html
@@ -61,6 +61,7 @@ translate("No more than that.")
 <li>translate("Set the page size. I use this: width: 138 mm; height: 210 mm.")</li>
 <li>translate("Set the margins. I use this: 10 mm for top and bottom margins, 12 mm for the outer margins, and 14 mm for the inner margins.")</li>
 <li>translate("Do not display the date in the running headers. Switch that setting off.")</li>
+<li>translate("Insert the 'en space' after verse numbers.")</li>
 <li>translate("Do a fresh export.")</li>
 </ul>
 <p>translate("The Logbook shows the progress. Proceed when it is ready.")</p>
