--- a/help/typesetting.html
+++ b/help/typesetting.html
@@ -57,7 +57,7 @@ translate("No more than that.")
 <li>translate("In Bibledit, go to menu Exports.")</li>
 <li>translate("Add Bible 'Ndebele' to the ones that will be exported.")</li>
 <li>translate("Use stylesheet 'Ndebele'.")</li>
-<li>translate("Output the chapter number in drop caps. Switch that setting on.")</li>
+<li>translate("Output the chapter number in drop caps. Do not use frames.")</li>
 <li>translate("Set the page size. I use this: width: 138 mm; height: 210 mm.")</li>
 <li>translate("Set the margins. I use this: 10 mm for top and bottom margins, 12 mm for the outer margins, and 14 mm for the inner margins.")</li>
 <li>translate("Do not display the date in the running headers. Switch that setting off.")</li>
