Updated typesetting info

--- a/help/typesetting.html
+++ b/help/typesetting.html
@@ -178,7 +178,7 @@ translate("Subheadings are an addition and not Scripture, so it is appropriate t
 </li>
 <li>
 translate("The space between the text and footnotes should not be too tight neither unnecessarily large.")
-translate("Keep the gap between the references in the footer and the main bock of text as consistent as possible.")
+translate("Keep the gap between the references in the footer and the main block of text as consistent as possible.")
 </li>
 <li>
 translate("The footnotes and crossreferences should not have a large variation in how far they finish from the foot of the page.")
