Help menu update

--- a/help/typesetting.html
+++ b/help/typesetting.html
@@ -43,7 +43,10 @@ translate("No more than that.")
 <p>translate("But the programs do not have a hyphenation algorithms for all languages.")</p>
 <p>translate("Bibledit has a hyphenater that could assist.")</p>
 <ul>
-<li>translate("In Bibledit, go to menu Hyphenation.")</li>
+  <li>
+    translate("In Bibledit, go to this menu:")
+    translate("Tools") - translate("Hyphenate").
+  </li>
 <li>translate("Enter the first set of characters, and the second set, and save it.")</li>
 <li>translate("Set the Bible where to take the data from. In this case it is 'Ndebele'.")</li>
 <li>translate("Insert the soft hyphens according to the setting. It takes a while to complete.")</li>
