--- a/help/typesetting.html
+++ b/help/typesetting.html
@@ -37,10 +37,10 @@ translate("No more than that.")
 <p>translate("The OpenDocument files are used as a starting point for typesetting.")</p>
 
 <h2>translate("Hyphenation")</h2>
-<p>translate("Some of the word in the OpenDocument files are long. This results in too much space between some words.")</p>
+<p>translate("Some of the words in the OpenDocument files are long. This results in too much space between some words.")</p>
 <p>translate("The words need to get hyphens so that part of the word goes on the next line.")</p>
 <p>translate("LibreOffice and Adobe InDesign and Scribus have hyphenation algorithms for many languages. That would solve the problem.")</p>
-<p>translate("But the programs do not have a hyphenation algorithms for all languages.")</p>
+<p>translate("But the programs do not have hyphenation algorithms for all languages.")</p>
 <p>translate("Bibledit has a hyphenater that could assist.")</p>
 <ul>
   <li>
@@ -255,7 +255,7 @@ translate("As a general rule text will be justified on the left and the right.")
 </li>
 <li>
 translate("A word, part of a word, or very short line should not appear by itself at the end of a paragraph.")
-translate("This result in less much white space between paragraphs or at the bottom of a page.")
+translate("This results in less much white space between paragraphs or at the bottom of a page.")
 </li>
 <li>
 translate("The main page numbering starts at the first page of the text of the Scripture.")
