--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.685: Translators can set the status of consultation notes.</p>
 <p>5.0.684: Localized file names of Bible exports.</p>
 <p>5.0.626: Localized Bible web export.</p>
 <p>5.0.626: Exports footnotes and cross references to QuickBible .yet file.</p>
