Fixed: Escapes special XML characters in export to OpenDocument
5.0.699. This fixes https://github.com/bibledit/cloud/issues/247

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.699: Fixed: Escapes special XML characters in export to OpenDocument.</p>
 <p>5.0.685: Translators can set the status of consultation notes.</p>
 <p>5.0.684: Localized file names of Bible exports.</p>
 <p>5.0.626: Localized Bible web export.</p>
