--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.728: Fixed: Suppresses NET Bible Warning Message.</p>
 <p>5.0.699: Fixed: Escapes special XML characters in export to OpenDocument.</p>
 <p>5.0.685: Translators can set the status of consultation notes.</p>
 <p>5.0.684: Localized file names of Bible exports.</p>
