--- a/system/index.html
+++ b/system/index.html
@@ -58,5 +58,14 @@ translate("Import it there.")
 <p><a href="?importresources=">translate("Import a Resources archive into this device.")</a></p>
 <!-- #ENDZONE client -->
 
+<h3>translate("Indexing")</h3>
+<p>
+translate("Bibledit uses indexes for fast lookup.")
+translate("Normally the indexes are refreshed automatically.")
+translate("When the Journal indicates unusual behaviour of an index, or errors, it needs to be recreated.")
+</p>
+<p><a href="?reindex=bibles">translate("Recreate Bibles index.")</a></p>
+<p><a href="?reindex=notes">translate("Recreate Consultation Notes index.")</a></p>
+
 <script type="text/javascript" src="../assets/checkbox.js"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
