--- a/system/index.html
+++ b/system/index.html
@@ -67,5 +67,24 @@ translate("When the Journal indicates unusual behaviour of an index, or errors, 
 <p><a href="?reindex=bibles">translate("Recreate Bibles index.")</a></p>
 <p><a href="?reindex=notes">translate("Recreate Consultation Notes index.")</a></p>
 
+<h3>translate("Fonts")</h3>
+<p>translate("The following fonts are available in Bibledit:")</p>
+<br>
+##fontsblock##
+<br>
+<!-- #BEGINZONE client -->
+<p>
+translate("You can add or remove fonts in Bibledit Cloud:")
+##cloudlink##
+</p>
+<!-- #ENDZONE client -->
+<!-- #BEGINZONE cloud -->
+<p>translate("You can upload a new font.")</p>
+<form enctype="multipart/form-data" action="index" method="POST">
+  <input name="fontdata" type="file" />
+  <input type="submit" name="uploadfont" value="translate("Upload")" />
+</form>
+<!-- #ENDZONE cloud -->
+
 <script type="text/javascript" src="../assets/checkbox.js"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
