Updated typesetting information

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.752: Updated typesetting information.</p>
 <p>5.0.735: Hides email servers password.</p>
 <p>5.0.733: Fixed: Quick Bible module did not show notes.</p>
 <p>5.0.728: Fixed: Suppresses NET Bible Warning Message.</p>
