Open Scriptures Hebrew Bible v 2.0
https://github.com/bibledit/cloud/issues/126
https://github.com/openscriptures/morphhb/releases/tag/v.2.0

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.755: Open Scriptures Hebrew Bible version 2.0.</p>
 <p>5.0.754: Fixed: Fails to display certain decomposed Hebrew characters on Linux.</p>
 <p>5.0.753: Check on well formed embedded markers.</p>
 <p>5.0.752: Updated typesetting information.</p>
