--- a/manage/exports.html
+++ b/manage/exports.html
@@ -153,7 +153,7 @@ translate("The help within the Online Bible provides more information about crea
 
 <hr>
 
-<p>translate("The Bible Drop Box provides many additional export formats.")</a></p>
+<p>translate("The Bible Drop Box provides many additional export formats.")</p>
 <p>
 <!-- #BEGINZONE client -->
   ##cloudlink##
@@ -165,6 +165,7 @@ translate("The help within the Online Bible provides more information about crea
 <p>
 <a href="http://freely-given.org/Software/BibleDropBox" ##external##>translate ("Visit the Bible Drop Box for more options.")</a>
 </p>
+<p><a href="https://github.com/bibledit/converters">translate("There are more export formats through the Bible converters software.")</a></p>
 
 <br>
 <hr>
