--- a/manage/exports.html
+++ b/manage/exports.html
@@ -128,14 +128,6 @@ translate("The exported file is suitable for the Online Bible module creation pr
 translate("The help within the Online Bible provides more information about creating a module.")
 </p>
 
-<!-- #BEGINZONE cloud -->
-<h3>translate("Quick Bible")</h3>
-<p>
-<input type="checkbox" name="quickbible" onchange="checkbox(this)" ##quickbible## /> translate("Export during the night.")
-<a href="?quickbiblenow=">translate("Export now.")</a>
-</p>
-<!-- #ENDZONE cloud -->
-
 <br>
 <hr>
 
@@ -165,7 +157,7 @@ translate("The help within the Online Bible provides more information about crea
 <p>
 <a href="http://freely-given.org/Software/BibleDropBox" ##external##>translate ("Visit the Bible Drop Box for more options.")</a>
 </p>
-<p><a href="https://github.com/bibledit/converters">translate("There are more export formats through the Bible converters software.")</a></p>
+<p><a href="https://github.com/bibledit/converters" ##external##>translate("There are more export formats through the BibleMultiConverter.")</a></p>
 
 <br>
 <hr>
