--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.761: Fixed: The author of a consultation note cannot edit the note content.</p>
 <p>5.0.759: Fixed: Translator cannot change stylesheet.</p>
 <p>5.0.758: Fixed: Client with member role cannot disconnect from the Cloud.</p>
 <p>5.0.756: Links to an external multi Bible converter.</p>
