--- a/sendreceive/index.html
+++ b/sendreceive/index.html
@@ -8,6 +8,14 @@
 <p>translate("Send and receive:")
 <a href="?runsync=">translate("now")</a>
 |
+<!-- #BEGINZONE repeatsync3 -->
+⇉
+<!-- #ENDZONE repeatsync3 -->
+<a href="?repeatsync=3">translate("Bibles every twenty seconds and the rest every fives minutes")</a>
+<!-- #BEGINZONE repeatsync3 -->
+⇇
+<!-- #ENDZONE repeatsync3 -->
+|
 <!-- #BEGINZONE repeatsync2 -->
 ⇉
 <!-- #ENDZONE repeatsync2 -->
