--- a/sendreceive/index.html
+++ b/sendreceive/index.html
@@ -11,7 +11,7 @@
 <!-- #BEGINZONE repeatsync3 -->
 ⇉
 <!-- #ENDZONE repeatsync3 -->
-<a href="?repeatsync=3">translate("Bibles every twenty seconds and the rest every fives minutes")</a>
+<a href="?repeatsync=3">translate("Bibles every twenty seconds and other data every fives minutes")</a>
 <!-- #BEGINZONE repeatsync3 -->
 ⇇
 <!-- #ENDZONE repeatsync3 -->
