--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.771: Android: Hides soft keyboard on tab switch.</p>
 <p>5.0.770: Updated warnings in case of a delayed send/receive action.</p>
 <p>5.0.765: The client can send and receive Bibles every 20 seconds.</p>
 <p>5.0.761: Fixed: The author of a consultation note cannot edit the note content.</p>
