Can move link to sort the change notifications to the top
https://github.com/bibledit/cloud/issues/275

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.777: Can move link to sort the change notifications to the top.</p>
 <p>5.0.774: Can go to the passage of a change notification as soon as one has loaded.</p>
 <p>5.0.772: Can sort the change notifications on author.</p>
 <p>5.0.771: Android: Hides soft keyboard on tab switch.</p>
