--- a/personalize/index.html
+++ b/personalize/index.html
@@ -233,6 +233,14 @@ translate ("Show the current verse text while creating a new consultation note")
 </p>
 <!-- #ENDZONE advancedmode -->
 
+<!-- #BEGINZONE advancedmode -->
+<br>
+<p>
+translate ("Disable the pop-up when text is selected on Chrome OS"):
+<a href="?disableselectionpopupchromeos">##disableselectionpopupchromeos##</a>.
+</p>
+<!-- #ENDZONE advancedmode -->
+
 <br>
 
 <script type="text/javascript" src="index.js?##VERSION##"></script>
