Show setting on Android and Chrome OS only
https://github.com/bibledit/cloud/issues/282

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -234,11 +234,13 @@ translate ("Show the current verse text while creating a new consultation note")
 <!-- #ENDZONE advancedmode -->
 
 <!-- #BEGINZONE advancedmode -->
+<!-- #BEGINZONE android -->
 <br>
 <p>
-translate ("Disable the pop-up when text is selected on Chrome OS"):
+translate ("Disable the pop-up when text is selected on Android and Chrome OS"):
 <a href="?disableselectionpopupchromeos">##disableselectionpopupchromeos##</a>.
 </p>
+<!-- #ENDZONE android -->
 <!-- #ENDZONE advancedmode -->
 
 <br>
