Setting specific to Chrome OS
https://github.com/bibledit/cloud/issues/282

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -234,13 +234,13 @@ translate ("Show the current verse text while creating a new consultation note")
 <!-- #ENDZONE advancedmode -->
 
 <!-- #BEGINZONE advancedmode -->
-<!-- #BEGINZONE android -->
+<!-- #BEGINZONE chromeos -->
 <br>
 <p>
-translate ("Disable the pop-up when text is selected on Android and Chrome OS"):
+translate ("Disable the pop-up menu when text is selected"):
 <a href="?disableselectionpopupchromeos">##disableselectionpopupchromeos##</a>.
 </p>
-<!-- #ENDZONE android -->
+<!-- #ENDZONE chromeos -->
 <!-- #ENDZONE advancedmode -->
 
 <br>
