Web export: previous chapter < and > next chapter button
https://github.com/bibledit/cloud/issues/289

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.780: Bible export to Web format has quick navigators for going to the previous and the next chapter.</p>
 <p>5.0.777: Gives information about how to copy a stylesheet.</p>
 <p>5.0.778: Can disable the text selection pop-up on Chrome OS.</p>
 <p>5.0.777: Can move link to sort the change notifications to the top.</p>
