--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.78y: Exports bold Asian and complex scripts to OpenDocument properly.</p>
 <p>5.0.786: A crash during public feedback was fixed</p>
 <p>5.0.782: Fixed on Android: Error clear text not permitted</p>
 <p>5.0.781: Web export can display a link for giving feedback by email.</p>
