--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,8 @@
 <h1>ChangeLog</h1>
 
-<p>5.0.789: Properly handled the \vp published verse marker.</p>
+<p>5.0.790: Emails user about any Bibledit - Paratext merge anomalies.</p>
+<p>5.0.790: More robust Bibledit - Paratext merging.</p>
+<p>5.0.789: Properly handles the \vp published verse marker.</p>
 <p>5.0.787: Exports bold Asian and complex scripts to OpenDocument properly.</p>
 <p>5.0.786: A crash during public feedback was fixed</p>
 <p>5.0.782: Fixed on Android: Error clear text not permitted</p>
