--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.791: Export to OpenDocument no longer has an extra space after the \vp markup.</p>
 <p>5.0.790: Emails user about any Bibledit - Paratext merge anomalies.</p>
 <p>5.0.790: More robust Bibledit - Paratext merging.</p>
 <p>5.0.789: Properly handles the \vp published verse marker.</p>
