--- a/notes/note.html
+++ b/notes/note.html
@@ -20,4 +20,6 @@ translate("Summary"): ##summary##
 <!-- #ENDZONE editcontent -->
 <p><a href="comment?id=##id##">translate("Add a comment to this note")</a></p>
 <!-- #ENDZONE comment -->
+<!-- Extra white space see issue cloud 310 -->
+<br>
 <script type="text/javascript" src="poll.js?##VERSION##"></script>
