Fix for unclickable link on Android
https://github.com/bibledit/cloud/issues/321

--- a/notes/note.html
+++ b/notes/note.html
@@ -20,6 +20,5 @@ translate("Summary"): ##summary##
 <!-- #ENDZONE editcontent -->
 <p><a href="comment?id=##id##">translate("Add a comment to this note")</a></p>
 <!-- #ENDZONE comment -->
-<!-- Extra white space see issue cloud 310 -->
-<br>
+##brs##
 <script type="text/javascript" src="poll.js?##VERSION##"></script>
