Updated install steps Ubuntu
This fixes https://github.com/bibledit/cloud/issues/319

--- a/help/installubuntu.html
+++ b/help/installubuntu.html
@@ -8,6 +8,9 @@
     translate("Add the Bibledit repository:")
     </p>
     <p><code>sudo add-apt-repository ppa:bibledit/ppa</code></p>
+    <p>
+    translate("As of Ubuntu 18.04, the above is no longer needed.")
+    </p>
   </li>
   <li>
     <p>translate("Read the repository:")</p>
