Link to info at github
https://github.com/bibledit/cloud/issues/319

--- a/help/installubuntu.html
+++ b/help/installubuntu.html
@@ -22,3 +22,8 @@
   </li>
 </ol>
 <p>translate("Bibledit can be started from the menu.")</p>
+<br>
+<p>
+translate("More information:")
+<a href="https://github.com/bibledit/cloud/issues/319">https://github.com/bibledit/cloud/issues/319</a>
+</p>
