Provide information to make people think twice before disconnecting from the Cloud
This fixes https://github.com/bibledit/cloud/issues/334

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.803: Provide information to make people think twice before disconnecting from the Cloud.</p>
 <p>5.0.802: The client can no longer send and receive Bibles every 20 seconds.</p>
 <p>5.0.795: Fixed: Link to font uploader.</p>
 <p>5.0.792: Fixed: Difficult to click link to add comment to note in workspace on Android.</p>
