--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.806: Update mbedTLS to 2.16.3.</p>
 <p>5.0.805: Fixed: After syncing with Paratext, it may send data to the Cloud even if not changed.</p>
 <p>5.0.804: Handle non-breaking space after chapter numbers in Paratext files.</p>
 <p>5.0.803: Provide information to make people think twice before disconnecting from the Cloud.</p>
