--- a/help/changelog.html
+++ b/help/changelog.html
@@ -2,7 +2,7 @@
 
 <p>5.0.807: If a Bible editor saves text, and it loaded less than two seconds ago, there's an alert.</p>
 <p>5.0.807: If a Bible editor loads text, and it saved less than two seconds ago, there's an alert.</p>
-<p>5.0.807: If the current chapter was saved less than two seconds ago, and a user saved to that, the user will receive an email notification.</p>
+<p>5.0.807: If the current chapter was saved less than two seconds ago, and a user saves to that, the user will receive an email notification.</p>
 <p>5.0.806: Update mbedTLS to 2.16.3.</p>
 <p>5.0.805: Fixed: After syncing with Paratext, it may send data to the Cloud even if not changed.</p>
 <p>5.0.804: Handle non-breaking space after chapter numbers in Paratext files.</p>
