Better merging of verse editor
https://github.com/bibledit/cloud/issues/340

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.809: While saving the verse editor merges its own text with what's already stored.</p>
 <p>5.0.808: If a Bible editor saves text, and the text on disk differs from what the editor loaded, an email will be sent to the user.</p>
 <p>5.0.807: If a Bible editor saves text, and it loaded less than two seconds ago, there's an alert.</p>
 <p>5.0.807: If a Bible editor loads text, and it saved less than two seconds ago, there's an alert.</p>
