--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.811: Fix broken filesystem on Android that led to instability of Bible editors.</p>
 <p>5.0.809: While saving the verse editor merges its own text with what's already stored.</p>
 <p>5.0.808: If a Bible editor saves text, and the text on disk differs from what the editor loaded, an email will be sent to the user.</p>
 <p>5.0.807: If a Bible editor saves text, and it loaded less than two seconds ago, there's an alert.</p>
