Move code downloads to github
https://github.com/bibledit/cloud/issues/347

--- a/help/installcloudsourcedebian.html
+++ b/help/installcloudsourcedebian.html
@@ -14,13 +14,15 @@
   <p><code>sudo apt-get install build-essential autotools-dev autoconf autoconf-archive git zip pkgconf libcurl4-openssl-dev libssl-dev poppler-utils libsword-utils diatheke ldap-utils libmimetic-dev certbot</code></p>
 </li>
 <li>
-  <p>translate("Download Bibledit:")</p>
-  <p><code>wget http://bibledit.org/cloud/bibledit-##cloudversion##.tar.gz</code></p>
+  <p>
+  translate("Download a recent version of Bibledit from")
+  <a href="https://github.com/bibledit/cloud/releases">https://github.com/bibledit/cloud/releases</a>.
+  </p>
 </li>
 <li>
-  <p>translate("Unpack Bibledit in folder bibledit:")</p>
+  <p>translate("Unpack the downloaded Bibledit in folder bibledit:")</p>
   <p><code>mkdir -p bibledit</code></p>
-  <p><code>tar xf bibledit-##cloudversion##.tar.gz -C bibledit --strip-components=1</code></p>
+  <p><code>tar xf bibledit-n.n.nnn.tar.gz -C bibledit --strip-components=1</code></p>
 </li>
 <li>
   <p>translate("Change to the directory:")</p>
