clearer install steps

--- a/help/installcloudsourcedebian.html
+++ b/help/installcloudsourcedebian.html
@@ -22,7 +22,7 @@
 <li>
   <p>translate("Unpack the downloaded Bibledit in folder bibledit:")</p>
   <p><code>mkdir -p bibledit</code></p>
-  <p><code>tar xf bibledit-n.n.nnn.tar.gz -C bibledit --strip-components=1</code></p>
+  <p><code>tar xf bibledit-5.0.8xx.tar.gz -C bibledit --strip-components=1</code></p>
 </li>
 <li>
   <p>translate("Change to the directory:")</p>
