--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.820: Clicking on a note at the bottom of the verse editor no longer focuses verse 0.</p>
 <p>5.0.816: The Windows version is now built through Visual Studio 2019.</p>
 <p>5.0.813: Only one Bible editor can be editable in a workspace.</p>
 <p>5.0.812: The Bible editors given an alert on text reload preventing typing.</p>
