--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.878: Cloud removes files older than 2 hours from file-based cache.</p>
 <p>5.0.867: Can clear unsent emails.</p>
 <p>5.0.823: Fixed: Pasting text in a footnote leads to a repeating \ft.</p>
 <p>5.0.820: Clicking on a note at the bottom of the verse editor no longer focuses verse 0.</p>
