--- a/help/installcloudsourcedebian.html
+++ b/help/installcloudsourcedebian.html
@@ -50,6 +50,6 @@
   <p><a href="http://192.168.2.1:8080">http://192.168.2.1:8080</a></p>
   <p><a href="http://localhost:8080">http://localhost:8080</a></p>
 </li>
-<li>translate("Open the web address in the browser, follow the instructions on the screen to configure Bibledit Cloud, and log in.")
+<li>translate("Open the web address in the browser, follow the instructions on the screen to configure Bibledit Cloud, and log in.")y
 </li>
 </ol>
