--- a/nmt/index.html
+++ b/nmt/index.html
@@ -3,5 +3,6 @@
 <p class="error">##error##</p>
 <p>translate("The reference Bible translation:") <a href="?reference=">##reference##</a>.</p>
 <p>translate("The Bible being translated:") <a href="?translating=">##translating##</a>.</p>
+<p><a href="?export=">translate("Export both Bibles and generate data for training a neural machine translation model.")</a></p>
 
 <script type="text/javascript" src="index.js"></script>
