--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.888: Fix applying "vp" style in Bible editors.</p>
 <p>5.0.887: Fixes BibleGateway resources display.</p>
 <p>5.0.886: Puts a space between the note caller and the cross reference text following it in OpenDocument.</p>
 <p>5.0.878: Cloud removes files older than 2 hours from file-based cache.</p>
