When failing to send emails due to a login denied, remaining emails are not sent off
https://github.com/bibledit/cloud/issues/384

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.889: When failing to send emails due to a login denied, remaining emails are not sent off.</p>
 <p>5.0.888: Fix applying "vp" style in Bible editors.</p>
 <p>5.0.887: Fixes BibleGateway resources display.</p>
 <p>5.0.886: Puts a space between the note caller and the cross reference text following it in OpenDocument.</p>
