Notifications UI from 2nd person to 1st person

--- a/user/notifications.html
+++ b/user/notifications.html
@@ -10,7 +10,7 @@
 <h3>translate("Consultation Notes")</h3>
 <p>
 <input type="checkbox" name="editednotessubscription" onchange="checkbox(this)" ##editednotessubscription## />
-translate("Subscribe to a consultation note you created or edited online or by email.")
+translate("Subscribe to a consultation note I created or edited online or by email.")
 </p>
 
 <p>
@@ -20,37 +20,37 @@ translate("Subscribe to a consultation note created or edited by anybody online 
 
 <p>
 <input type="checkbox" name="emailconfirmationyourposts" onchange="checkbox(this)" ##emailconfirmationyourposts## />
-translate("Receive email confirmation of your posts to a consultation notes done by email.")
+translate("Receive email confirmation of my posts to a consultation notes done by email.")
 </p>
 
 <p>
 <input type="checkbox" name="subscribednotenotification" onchange="checkbox(this)" ##subscribednotenotification## />
-translate("Receive email about changes in a consultation note you are subscribed to.")
+translate("Receive email about changes in a consultation note I am subscribed to.")
 </p>
 
 <p>
 <input type="checkbox" name="notesassignment" onchange="checkbox(this)" ##notesassignment## />
-translate("A consultation note that gets changed will be assigned to you.")
+translate("A consultation note that gets changed will be assigned to me.")
 </p>
 
 <p>
 <input type="checkbox" name="assignednotenotification" onchange="checkbox(this)" ##assignednotenotification## />
-translate("Receive email about changes in a consultation note assigned to you.")
+translate("Receive email about changes in a consultation note assigned to me.")
 </p>
 
 <p>
 <input type="checkbox" name="suppressemailsfromnotesyouupdated" onchange="checkbox(this)" ##suppressemailsfromnotesyouupdated## />
-translate("Suppress receiving email from an updated consultation note if the update was made by you.")
+translate("Suppress receiving email from an updated consultation note if the update was made by me.")
 </p>
 
 <p>
 <input type="checkbox" name="assignednotesnotification" onchange="checkbox(this)" ##assignednotesnotification## />
-translate("Receive daily mail with the number of consultation notes assigned to you.")
+translate("Receive daily mail with the number of consultation notes assigned to me.")
 </p>
 
 <p>
 <input type="checkbox" name="subscribednotesnotification" onchange="checkbox(this)" ##subscribednotesnotification## />
-translate("Receive daily mail with the number of consultation notes you are subscribed to.")
+translate("Receive daily mail with the number of consultation notes I am subscribed to.")
 </p>
 
 <p>
@@ -60,12 +60,12 @@ translate("Receive email about a deleted consultation note.")
 
 <p>
 <input type="checkbox" name="postponenewnotesmails" onchange="checkbox(this)" ##postponenewnotesmails## />
-translate("Emails that would normally be sent right after you have created a consultation note, delay them till the evening.")
+translate("Emails that would normally be sent right after I have created a consultation note, delay them till the evening.")
 translate("This setting may be useful in the following scenario:")
-translate("Each time you create a new note, the other members of the team get interrupted by your email.")
+translate("Each time I create a new note, the other members of the team get interrupted by my email.")
 translate("This happens many times a day.")
-translate("You don't want these interruptions, but the team members need to get your email eventually.")
-translate("Tick this setting, and you're done.")
+translate("I don't want these interruptions, but the team members need to get my email eventually.")
+translate("Tick this setting, and I am done.")
 </p>
 
 <h3>translate("Change Notifications")</h3>
@@ -73,7 +73,7 @@ translate("Tick this setting, and you're done.")
 <!-- #BEGINZONE writebible -->
 <p>
 <input type="checkbox" name="mychangesemailnotifications" onchange="checkbox(this)" ##mychangesemailnotifications## />
-translate("Receive daily mail with the changes in the Bible made by you.")
+translate("Receive daily mail with the changes in the Bible made by me.")
 </p>
 <!-- #ENDZONE writebible -->
 
@@ -87,22 +87,22 @@ translate("Receive daily mail with the changes in the Bible made by anyone.")
 <!-- #BEGINZONE consultant -->
 <p>
 <input type="checkbox" name="anyonechangesonlinenotifications" onchange="checkbox(this)" ##anyonechangesonlinenotifications## />
-<a href="../changes/changes">translate("Notifications about changes in the Bible made by anyone will be generated for you online.")</a>
+<a href="../changes/changes">translate("Notifications about changes in the Bible made by anyone will be generated for me online.")</a>
 </p>
 
 <p>
 <input type="checkbox" name="mychangesonlinenotifications" onchange="checkbox(this)" ##mychangesonlinenotifications## />
-<a href="../changes/changes">translate("Notifications about changes in the Bible made by you will be generated for you online.")</a>
+<a href="../changes/changes">translate("Notifications about changes in the Bible made by me will be generated for me online.")</a>
 </p>
 
 <p>
 <input type="checkbox" name="contributorschangesonlinenotifications" onchange="checkbox(this)" ##contributorschangesonlinenotifications## />
-<a href="../changes/changes">translate("Notifications about changes in the Bible made by the individual contributors will be generated for you online.")</a>
+<a href="../changes/changes">translate("Notifications about changes in the Bible made by the individual contributors will be generated for me online.")</a>
 </p>
 
 <p>
 <input type="checkbox" name="pendingchangenotifications" onchange="checkbox(this)" ##pendingchangenotifications## />
-translate("Receive daily mail with the number of online change notifications awaiting your attention.")
+translate("Receive daily mail with the number of online change notifications awaiting my attention.")
 </p>
 <!-- #ENDZONE consultant -->
 
