--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.891: A translator can now edit the summary of a consultation note.</p>
 <p>5.0.890: Setting to automatically assign a new consultation note to certain users.</p>
 <p>5.0.889: When failing to send emails due to a login denied, remaining emails are not sent off.</p>
 <p>5.0.888: Fix applying "vp" style in Bible editors.</p>
