--- a/workspace/index.html
+++ b/workspace/index.html
@@ -2,19 +2,19 @@
 <!-- #BEGINZONE height1 -->
 <div class="iframewrapper" style="flex-grow: ##height1##">
   <!-- #BEGINZONE width11 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url11##" style="flex-grow: ##width11##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url11##" style="flex-grow: ##width11##" data-editor-no="##editorno11##"></iframe>
   <!-- #ENDZONE width11 -->
   <!-- #BEGINZONE width12 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url12##" style="flex-grow: ##width12##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url12##" style="flex-grow: ##width12##" data-editor-no="##editorno12##"></iframe>
   <!-- #ENDZONE width12 -->
   <!-- #BEGINZONE width13 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url13##" style="flex-grow: ##width13##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url13##" style="flex-grow: ##width13##" data-editor-no="##editorno13##"></iframe>
   <!-- #ENDZONE width13 -->
   <!-- #BEGINZONE width14 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url14##" style="flex-grow: ##width14##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url14##" style="flex-grow: ##width14##" data-editor-no="##editorno14##"></iframe>
   <!-- #ENDZONE width14 -->
   <!-- #BEGINZONE width15 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url15##" style="flex-grow: ##width15##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url15##" style="flex-grow: ##width15##" data-editor-no="##editorno15##"></iframe>
   <!-- #ENDZONE width15 -->
 </div>
 <!-- #ENDZONE height1 -->
@@ -22,19 +22,19 @@
 <!-- #BEGINZONE height2 -->
 <div class="iframewrapper" style="flex-grow: ##height2##">
   <!-- #BEGINZONE width21 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url21##" style="flex-grow: ##width21##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url21##" style="flex-grow: ##width21##" data-editor-no="##editorno21##"></iframe>
   <!-- #ENDZONE width21 -->
   <!-- #BEGINZONE width22 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url22##" style="flex-grow: ##width22##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url22##" style="flex-grow: ##width22##" data-editor-no="##editorno22##"></iframe>
   <!-- #ENDZONE width22 -->
   <!-- #BEGINZONE width23 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url23##" style="flex-grow: ##width23##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url23##" style="flex-grow: ##width23##" data-editor-no="##editorno23##"></iframe>
   <!-- #ENDZONE width23 -->
   <!-- #BEGINZONE width24 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url24##" style="flex-grow: ##width24##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url24##" style="flex-grow: ##width24##" data-editor-no="##editorno24##"></iframe>
   <!-- #ENDZONE width24 -->
   <!-- #BEGINZONE width25 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url25##" style="flex-grow: ##width25##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url25##" style="flex-grow: ##width25##" data-editor-no="##editorno25##"></iframe>
   <!-- #ENDZONE width25 -->
 </div>
 <!-- #ENDZONE height2 -->
@@ -42,19 +42,19 @@
 <!-- #BEGINZONE height3 -->
 <div class="iframewrapper" style="flex-grow: ##height3##">
   <!-- #BEGINZONE width31 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url31##" style="flex-grow: ##width31##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url31##" style="flex-grow: ##width31##" data-editor-no="##editorno31##"></iframe>
   <!-- #ENDZONE width31 -->
   <!-- #BEGINZONE width32 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url32##" style="flex-grow: ##width32##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url32##" style="flex-grow: ##width32##" data-editor-no="##editorno32##"></iframe>
   <!-- #ENDZONE width32 -->
   <!-- #BEGINZONE width33 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url33##" style="flex-grow: ##width33##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url33##" style="flex-grow: ##width33##" data-editor-no="##editorno33##"></iframe>
   <!-- #ENDZONE width33 -->
   <!-- #BEGINZONE width34 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url34##" style="flex-grow: ##width34##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url34##" style="flex-grow: ##width34##" data-editor-no="##editorno34##"></iframe>
   <!-- #ENDZONE width34 -->
   <!-- #BEGINZONE width35 -->
-  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url35##" style="flex-grow: ##width35##"></iframe>
+  <iframe sandbox="allow-forms allow-pointer-lock allow-same-origin allow-scripts" src="##url35##" style="flex-grow: ##width35##" data-editor-no="##editorno35##"></iframe>
   <!-- #ENDZONE width35 -->
 </div>
 <!-- #ENDZONE height3 -->
