--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.893: The chapter editor honours the setting for the initial vertical position of the cursor.</p>
 <p>5.0.892: Fixed: The second Bible editor at times was not read-only leading to unexpected caret jumps.</p>
 <p>5.0.891: A translator can now edit the summary of a consultation note.</p>
 <p>5.0.890: Setting to automatically assign a new consultation note to certain users.</p>
