--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.897: The USFM editor positions the editing cursor after going to another chapter and verse.</p>
 <p>5.0.894: AppStream data was added to the Linux client.</p>
 <p>5.0.894: Fixed: Second USFM editor in a workspace does not move the focused verse into view.</p>
 <p>5.0.893: Fixed: Focused verse in USFM editor jumps to next verse if there's a space at the end of the verse text.</p>
