--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.899: Fixed: Displays an alert "Text reloaded" while saving text in the verse editor.</p>
 <p>5.0.898: Type Ctrl-G to enter the passage to focus through the keyboard.</p>
 <p>5.0.897: The USFM editor positions the editing cursor after going to another chapter and verse.</p>
 <p>5.0.894: AppStream data was added to the Linux client.</p>
