Better layout of merge anomaly email
https://github.com/bibledit/cloud/issues/406

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.901: Better layout of the merge anomaly email.</p>
 <p>5.0.899: Fixed: Displays an alert about "text reloaded" while saving text in the verse editor.</p>
 <p>5.0.898: Type Ctrl-G to enter the passage to focus through the keyboard.</p>
 <p>5.0.897: The USFM editor positions the editing cursor after going to another chapter and verse.</p>
