--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,5 +1,6 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.903: Entering a footnote adds the reference, the keyword, and the footnote text.</p>
 <p>5.0.902: The merge anomaly email contains the passage.</p>
 <p>5.0.901: Better layout of the merge anomaly email.</p>
 <p>5.0.899: Fixed: Displays an alert about "text reloaded" while saving text in the verse editor.</p>
