--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,6 +1,8 @@
 <h1>ChangeLog</h1>
 
+<p>5.0.903: If a Bible editor has focus, and its text is reloaded, it will be read-only for some seconds.</p>
 <p>5.0.903: If a Bible editor has focus, it shows a notification when the text is reloaded.</p>
+<p>5.0.903: Entering a cross reference adds the reference, the keyword, and the cross reference text.</p>
 <p>5.0.903: Entering a footnote adds the reference, the keyword, and the footnote text.</p>
 <p>5.0.902: The merge anomaly email contains the passage.</p>
 <p>5.0.901: Better layout of the merge anomaly email.</p>
